@@ -20,6 +20,8 @@ dev
 16. If set to combine apps and radio then categrise apps.
 17. Allow using grid for genres even when genre images are disabled.
 18. Only show detailed sub-toolbar if window is at least 400px tall.
+19. Allow using detailed sub-toolbar for playlists, if playlist image support
+    is enabled.
 
 5.11.5
 ------
